Fixes #38337 - Adjust icon spacing after PF5 upgrade (#11362)

--- a/webpack/scenes/ContentViews/Create/CreateContentViewForm.scss
+++ b/webpack/scenes/ContentViews/Create/CreateContentViewForm.scss
@@ -6,4 +6,12 @@
   .pf-v5-c-tile__icon {
     min-height: 38px;
   }
+
+  .pf-v5-c-check__label {
+    margin-top: 4px;
+  }
+
+  .foreman-spaced-icon {
+    margin: 0;
+  }
 }
