--- a/webpack/scenes/ContentViews/components/EnvironmentPaths/EnvironmentPaths.scss
+++ b/webpack/scenes/ContentViews/components/EnvironmentPaths/EnvironmentPaths.scss
@@ -2,6 +2,9 @@
   .pf-v5-c-form__group {
     margin: 20px 0;
   }
+  .pf-v5-c-check__label, .pf-v5-c-radio__label {
+    margin: 0;
+  }
 
   .env-path__labels-with-pointer {
     &:not(:last-child):after {
